--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,8 @@
     <string name="title_Perfil">Perfil</string>
     <string name="BTLogOut">Cerrar Sesion</string>
     <string name="NoLogin">No se pudo iniciar sesion</string>
+    <string name="NoLogOut">No se pudo cerrar sesion</string>
+    <string name="UsarCuentaUdea">Debes Loguearte con una cuenta de la Universidad de Antioquia</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
