--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,11 @@
     <string name="NoLogin">No se pudo iniciar sesion</string>
     <string name="NoLogOut">No se pudo cerrar sesion</string>
     <string name="UsarCuentaUdea">Debes Loguearte con una cuenta de la Universidad de Antioquia</string>
+    <string name="DefaultWhatsapp">(Numero de Contacto)</string>
+    <string name="BActulizarNum">Actualizar</string>
+    <string name="STVNombre">Nombre</string>
+    <string name="STVCorreo">Correo</string>
+    <string name="STVNumero">Numero de Contacto</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
