--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,9 @@
     <string name="STVCorreo">Correo</string>
     <string name="STVNumero">Numero de Contacto</string>
     <string name="ConfirmacionRuta">Ruta Compartida con Exito</string>
+    <string name="noNumero">No hay numero disponible, utilice otra opcion de contacto</string>
+    <string name="btnCompartrir">Compartir Ruta!</string>
+    <string name="btnCancelarComp">Cancelar</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
